# P4-MNA

./: README.md
.github/workflows/: controller.yml  data_plane.yml
tofino_hbh_preservation/Local-Controller/: Cargo.toml
tofino_hbh_preservation/Local-Controller/src/: main.rs
tofino_hbh_preservation/Local-Controller/src/mna/: mna_controller.rs
tofino_hbh_preservation/P4-Implementation/: Makefile  mna_hbh_preservation.p4
tofino_hbh_preservation/P4-Implementation/src/: egress.p4  headers.p4  ingress.p4  parser.p4
tofino_hbh_preservation/P4-Implementation/src/controls/: IPv4.p4  mna.p4  mpls.p4
tofino_hbh_preservation/P4-Implementation/src/controls/mna/: mna_first_nas.p4  mna_second_nas.p4
tofino_mna_isd/Local-Controller/: Cargo.toml
tofino_mna_isd/Local-Controller/src/: main.rs
tofino_mna_isd/Local-Controller/src/mna/: mna_controller.rs  mod.rs
tofino_mna_isd/P4-Implementation/: Makefile
tofino_mna_isd/P4-Implementation/src/: egress.p4  headers.p4  ingress.p4  parser.p4
tofino_mna_isd/P4-Implementation/src/controls/: mna.p4  mpls.p4
tofino_mna_isd/P4-Implementation/src/controls/mna/: mna_first_nas.p4  mna_second_nas.p4
tofino_mna_isd/evaluation/: mna_p4tg_eval.py  plot_packet_loss_nrp.py
utils/lib/: MNA.py  send_mna_packet.py
utils/wireshark/: mna_wireshark.lua
